<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menuTile0" />
        <item
            android:id="@+id/nav_register"
            android:icon="@mipmap/menu1"
            android:title="@string/menuTile1" />
        <item
            android:id="@+id/nav_list"
            android:icon="@mipmap/menu2"
            android:title="@string/menuTile2" />
        <item
            android:id="@+id/nav_promotion"
            android:icon="@mipmap/menu3"
            android:title="@string/menuTile3" />
        <item
            android:id="@+id/nav_centers"
            android:icon="@mipmap/menu4"
            android:title="@string/menuTile4" />
    </group>
</menu>
