<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="30dp"
    android:paddingLeft="60dp"
    android:paddingRight="60dp"
    tools:context=".UpdateChild" >

    <TextView
        android:id="@+id/textView"
        android:textSize="18dp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titleUpdateChild"
        android:layout_marginBottom="25dp"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/idETextName"
        android:textSize="18dp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:text="@string/loading"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal" />

    <GridLayout
        android:id="@+id/GridLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="2"
        android:orientation="horizontal"
        tools:context=".GridXMLActivity" >

        <EditText
            android:id="@+id/idETextAge"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:ems="10"
            android:hint="Edad"
            android:inputType="number" />

        <TextView
            android:id="@+id/text1"
            android:textSize="18dp"
            android:text="@string/textAge"
            android:layout_marginLeft="15dp"
            android:layout_gravity="left"/>

    </GridLayout>
    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/GridLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="2"
        android:orientation="horizontal"
        tools:context=".GridXMLActivity" >

        <EditText
            android:id="@+id/idETextWeight"
            android:layout_width="145dp"
            android:layout_marginBottom="12dp"
            android:ems="10"
            android:hint="Peso"
            android:inputType="numberDecimal" />
        <TextView
            android:id="@+id/text2"
            android:textSize="18dp"
            android:text="@string/textKg"
            android:layout_marginLeft="15dp"
            android:layout_gravity="left"/>

    </GridLayout>
    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/GridLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="2"
        android:orientation="horizontal"
        tools:context=".GridXMLActivity" >

        <EditText
            android:id="@+id/idETextSize"
            android:layout_width="145dp"
            android:layout_marginBottom="12dp"
            android:ems="10"
            android:hint="Talla"

            android:inputType="numberDecimal" />
        <TextView
            android:id="@+id/text3"
            android:textSize="18dp"
            android:text="@string/textCm"
            android:layout_marginLeft="15dp"
            android:layout_gravity="left"/>

    </GridLayout>

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/GridLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="2"
        android:orientation="horizontal"
        tools:context=".GridXMLActivity" >
        <EditText
            android:id="@+id/idETextHemogl"
            android:layout_width="145dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="Hemoglobina"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/text4"
            android:textSize="18dp"
            android:text="@string/texthemoglobina"
            android:layout_marginLeft="15dp"
            android:layout_gravity="left"/>

    </GridLayout>

    <TextView
        android:id="@+id/idETextLoading"
        android:textSize="18dp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/idBtnNextUserRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:onClick="updateChild"
        android:text="@string/update"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idETextConfirmPassword"
        app:layout_constraintVertical_bias="0.085"
        tools:ignore="OnClick" />

</LinearLayout>