<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:paddingTop="40dp"
android:paddingLeft="60dp"
android:paddingRight="60dp"
tools:context=".ui.childregister.ChildRegister"
    >

<TextView
    android:id="@+id/textView"
    android:textSize="18dp"
    android:textAlignment="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/registerTxt"
    android:layout_marginBottom="35dp"
    android:gravity="center_horizontal" />


<EditText
    android:id="@+id/idETextName"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:hint="Ingresar correo"
    android:layout_marginBottom="15dp"
    android:inputType="text" />

<EditText
    android:id="@+id/idETextPhone"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:hint="Ingresar contraseña"
    android:layout_marginBottom="15dp"
    android:inputType="textPassword" />
<EditText
    android:id="@+id/idETextEmail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:hint="Repetir contraseña"
    android:inputType="textPassword"
    android:layout_marginBottom="15dp"
  />


<Button
    android:id="@+id/idBtnNextUserRegister"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:onClick="saveUser"
    android:layout_marginBottom="30dp"
    android:text="@string/registerBtn"
    android:textColor="@color/colorWhite"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/idETextConfirmPassword"
    app:layout_constraintVertical_bias="0.085"
    tools:ignore="OnClick" />

<Button
    android:id="@+id/idBtnNextUserRegiste1r"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:onClick="goSignIn"
    android:text="@string/redirectLogin"
    android:textColor="@color/colorPrimary"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/idETextConfirmPassword"
    app:layout_constraintVertical_bias="0.085"
    tools:ignore="OnClick" />


</LinearLayout>